@@ -26,6 +26,7 @@ Other information:
 Changes since the last public release (1.6.32):
   Added PNGMINUS_UNUSED macro to contrib/pngminus/p*.c and added missing
     parenthesis in contrib/pngminus/pnm2png.c (bug report by Christian Hesse).
+  Free row_ptr in PNG_CLEANUP macro in contrib/oss-fuzz/libpng_read_fuzzer.cc
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
