@@ -1,4 +1,4 @@
-README for libpng version 1.6.33beta01 - August 25, 2017 (shared library 16.0)
+README for libpng version 1.6.33beta01 - August 28, 2017 (shared library 16.0)
 See the note about version numbers near the top of png.h
 
 See INSTALL for instructions on how to install libpng.
