@@ -2,7 +2,7 @@
 <!--
  * zlib.props - location of zlib source
  *
- * libpng version 1.6.33beta01 - August 25, 2017
+ * libpng version 1.6.33beta01 - August 28, 2017
  *
  * Copyright (c) 1998-2011 Glenn Randers-Pehrson
  *
