@@ -2,7 +2,7 @@
 
 /* pnglibconf.h - library build configuration */
 
-/* Libpng version 1.6.33beta01 - August 25, 2017 */
+/* Libpng version 1.6.33beta01 - August 28, 2017 */
 
 /* Copyright (c) 1998-2017 Glenn Randers-Pehrson */
 
